--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ body {
   background-color: var(--basic-dark);
   background-position: center;
   background-repeat: no-repeat;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -39,19 +43,50 @@ h2 {
   color: var(--basic-extra-dark);
 }
 
+/* Grid */
+
+.page {
+  height: 100%;
+}
 /* Main navigation */
 .main-navigation {
   font-size: 14px;
   line-height: 26px;
   color: var(--basic-extra-dark);
   background-color:var(--basic-white);
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.main-header-logo {
+  order: 0;
+  justify-self: center;
+  
 }
 
 .site-navigation {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Welcome title */
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+.welcome {
+  background-image: url(../img/background\ photo.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+  width: 1200px;
+  height: 509px;
+}
 .welcome-title {
 background-color:var(--basic-white);
 }
@@ -82,12 +117,19 @@ background-color:var(--basic-white);
 }
 
 .advantages-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
   font-size: 14px;
   font-weight: 400;
   text-transform: uppercase;
   line-height: 21px;
   color: var(--basic-extra-dark) ;
   list-style: none;
+  text-align: center;
 }
 
 /* Best offer */
@@ -135,6 +177,8 @@ line-height: 26px;
 .main-footer {
 color: var(--basic-extra-dark);
 background-color: var(--basic-white);
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* Catalog Hotel Filters */
